--- a/html/global.css
+++ b/html/global.css
@@ -1,71 +1,69 @@
-.setup { }
-
 /** Page Title **/
-.setup h1.header { display:block; width:500px; margin:50px auto 0 auto }
+.minima h1.header { display:block; width:500px; margin:50px auto 0 auto }
 
 
 /** Page **/
-.setup .page { width:500px; margin:auto; padding:10px }
+.minima .page { width:500px; margin:auto; padding:10px }
 
 
-.setup .page h2.header { }
-.setup .page p.header { }
+.minima .page h2.header { }
+.minima .page p.header { }
 
 
 /** Input Boxes **/
-.setup .page div.inputs input[type=text],
-.setup .page div.inputs input[type=password],
-.setup .page div.inputs textarea
+.minima .page div.inputs input[type=text],
+.minima .page div.inputs input[type=password],
+.minima .page div.inputs textarea
 { display:block; border:1px solid #333; padding:15px; margin:0 0 15px 0; width:468px }
-.setup .page div.inputs textarea { height:200px; font-family:monospace }
+.minima .page div.inputs textarea { height:200px; font-family:monospace }
 
 /** Activator (Checkbox) **/
-.setup .page div.inputs div.activator { margin:0 0 10px 0 }
+.minima .page div.inputs div.activator { margin:0 0 10px 0 }
 
 
 /** Next Button - a.button / button element **/
-.setup .page div.next-button a.button,
-.setup .page div.next-button button
+.minima .page div.next-button a.button,
+.minima .page div.next-button button
 { display:inline-block; background:none; cursor:pointer; padding:10px; border-radius:5px; border:2px solid #333; color:#333; text-decoration:none;  }
 
 /** Next Button - a.button / button element (on hover) **/
-.setup .page div.next-button a.button:hover,
-.setup .page div.next-button button:hover
+.minima .page div.next-button a.button:hover,
+.minima .page div.next-button button:hover
 { border: 2px solid #666; color:#666 }
 
 
 /** UL Status (pending) **/
-.setup .page ul.status li.pending { list-style-type: none; color:#b9b9b9 }
-.setup .page ul.status li.pending:before { display:inline-block; content:'•'; width:15px; color:#b9b9b9; font-weight:bold; font-size:18px }
+.minima .page ul.status li.pending { list-style-type: none; color:#b9b9b9 }
+.minima .page ul.status li.pending:before { display:inline-block; content:'•'; width:15px; color:#b9b9b9; font-weight:bold; font-size:18px }
 
 /** UL Status (in-progress) **/
-.setup .page ul.status li.in-progress { list-style-type: none; color:#dcb415 }
-.setup .page ul.status li.in-progress:before { display:inline-block; content:'•'; width:15px; color:#dcb415; font-weight:bold; font-size:18px }
+.minima .page ul.status li.in-progress { list-style-type: none; color:#dcb415 }
+.minima .page ul.status li.in-progress:before { display:inline-block; content:'•'; width:15px; color:#dcb415; font-weight:bold; font-size:18px }
 
 /** UL Status (wont-do) **/
-.setup .page ul.status li.wont-do { list-style-type: none; color:#a0a0a0 }
-.setup .page ul.status li.wont-do:before { display:inline-block; content:'x'; width:15px; color:#a0a0a0; font-weight:bold; font-size:18px }
+.minima .page ul.status li.wont-do { list-style-type: none; color:#a0a0a0 }
+.minima .page ul.status li.wont-do:before { display:inline-block; content:'x'; width:15px; color:#a0a0a0; font-weight:bold; font-size:18px }
 
 /** UL Status (fail) **/
-.setup .page ul.status li.fail { list-style-type: none; color:#f00 }
-.setup .page ul.status li.fail:before { display:inline-block; content:'x'; width:15px; color:#f00; font-weight:bold; font-size:18px }
+.minima .page ul.status li.fail { list-style-type: none; color:#f00 }
+.minima .page ul.status li.fail:before { display:inline-block; content:'x'; width:15px; color:#f00; font-weight:bold; font-size:18px }
 
 /** UL Status (success) **/
-.setup .page ul.status li.success { list-style-type: none; color:green; font-weight:bold }
-.setup .page ul.status li.success:before { display:inline-block; content:'✓ '; width:20px; color:#0bb30b; font-weight:bold; font-size:18px }
+.minima .page ul.status li.success { list-style-type: none; color:green; font-weight:bold }
+.minima .page ul.status li.success:before { display:inline-block; content:'✓ '; width:20px; color:#0bb30b; font-weight:bold; font-size:18px }
 
 
 /** Page message success **/
-.setup .page .message.success { margin:80px 0 0 0; background:#fff2c0; padding:20px; border-radius:20px }
-.setup .page .message.success h3:before { display:inline-block; content:'✓ '; width:20px; color:#0bb30b; font-weight:bold; font-size:18px }
-.setup .page .message.success h3 { color:#080 }
-.setup .page .message.success p { font-style:italic }
+.minima .page .message.success { margin:80px 0 0 0; background:#fff2c0; padding:20px; border-radius:20px }
+.minima .page .message.success h3:before { display:inline-block; content:'✓ '; width:20px; color:#0bb30b; font-weight:bold; font-size:18px }
+.minima .page .message.success h3 { color:#080 }
+.minima .page .message.success p { font-style:italic }
 
 /** Page message fail **/
-.setup .page .message.fail { margin:80px 0 0 0; background:#fff2c0; padding:20px; border-radius:20px }
-.setup .page .message.fail h3:before { display:inline-block; content:'x'; width:15px; color:#f00; font-weight:bold; font-size:18px }
-.setup .page .message.fail h3 { color:#f00 }
-.setup .page .message.fail p { font-style:italic }
+.minima .page .message.fail { margin:80px 0 0 0; background:#fff2c0; padding:20px; border-radius:20px }
+.minima .page .message.fail h3:before { display:inline-block; content:'x'; width:15px; color:#f00; font-weight:bold; font-size:18px }
+.minima .page .message.fail h3 { color:#f00 }
+.minima .page .message.fail p { font-style:italic }
 
 
 /** Setup Done Page **/
